--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js2xmlparser": "^2.0.2",
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
+    "promise": "^7.1.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "shopify-api-node": "^2.3.0",
