--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": ". config/index.env && nodemon index.js",
+    "dev": ". config/index.env && . config/local.env && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "express-handlebars": "^3.0.0",
     "js2xmlparser": "^2.0.2",
+    "koa": "^2.2.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-hbs": "^0.9.0",
+    "koa-router": "^7.1.1",
+    "koa-static": "^3.0.0",
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
-    "promise": "^7.1.1",
+    "redis": "^2.7.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "shopify-api-node": "^2.3.0",
     "shopify-token": "^3.0.0",
+    "soap": "^0.19.0",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
