--- a/config/index.env
+++ b/config/index.env
@@ -9,6 +9,12 @@ SC_URL="https://ws-dev.shipcompliant.com/services/1.2/coreservice.asmx?WSDL"
 SC_USER="metonymyws@shipcompliant.com"
 SC_PASSWORD="Password1"
 
+
+# Shopify
+
+API_KEY="cc4a45f80b5b09aa143cab3065972dd1"
+API_SECRET="611ea6cf44a6e0d88197f6b7f9751c94"
+
 # RESOURCES
 RES_POSTGRES_HOST="127.0.0.1"
 RES_POSTGRES_PORT=5432
