--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "start": ". config/index.env && nodemon index.js",
     "dev": ". config/index.env && . config/local.env && nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore ."
   },
+  "pre-commit": [
+    "lint"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,9 +24,11 @@
     "koa-static": "^3.0.0",
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
+    "pg-hstore": "^2.3.2",
     "redis": "^2.7.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
+    "sequelize": "^3.30.4",
     "shopify-api-node": "^2.3.0",
     "shopify-token": "^3.0.0",
     "soap": "^0.19.0",
@@ -30,6 +36,7 @@
   },
   "devDependencies": {
     "koa-logger": "^2.0.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "pre-commit": "^1.2.2"
   }
 }
