--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-hbs": "^0.9.0",
     "koa-router": "^7.1.1",
+    "koa-session": "^5.0.0",
     "koa-static": "^3.0.0",
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
