--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
     "koa-logger": "^2.0.1",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2"
