Add sync endpoint

--- a/config/index.env
+++ b/config/index.env
@@ -5,7 +5,9 @@ APP_URL="e8962486.ngrok.io"
 PORT=1988
 
 # SHIP COMPLIANT
-SC_URL="https://ws-dev.shipcompliant.com/services/1.2/coreservice.asmx?WSDL"
+SC_CORE_URL="https://ws.shipcompliant.com/services/1.2/coreservice.asmx?WSDL"
+SC_SUPPLIER_URL="https://ws.shipcompliant.com/services/1.2/supplierservice.asmx?WSDL"
+SC_TAX_URL="https://ws.shipcompliant.com/services/1.2/taxservice.asmx?WSDL"
 SC_USER="metonymyws@shipcompliant.com"
 SC_PASSWORD="Password1"
 
@@ -19,3 +21,5 @@ RES_POSTGRES_PASSWORD="m3t0nymy"
 
 RES_REDIS_HOST="127.0.0.1"
 RES_REDIS_PORT=6379
+
+STATES_LIST="AK,AL,AR,AZ,CA,CO,CT,DE,FL,GA,HI,IA,ID,IL,IN,KS,KY,LA,MA,MD,ME,MI,MN,MO,MS,MT,NC,ND,NE,NH,NJ,NM,NV,NY,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VA,VT,WA,WI,WV,WY"
