--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router": "^4.1.1",
     "redis": "^2.7.1",
+    "redux": "^3.6.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "sequelize": "^3.30.4",
@@ -36,8 +40,16 @@
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.1",
+    "file-loader": "^0.11.1",
     "koa-logger": "^2.0.1",
     "nodemon": "^1.11.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "sass-loader": "^6.0.3",
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
