--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-hbs": "^1.0.0-alpha.1",
     "koa-router": "^7.1.1",
+    "koa-send": "^4.1.0",
     "koa-session": "^5.0.0",
     "koa-static": "^3.0.0",
     "oauth": "^0.9.15",
@@ -29,6 +30,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "redis": "^2.7.1",
     "redux": "^3.6.0",
     "request": "^2.79.0",
@@ -40,16 +42,24 @@
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.1",
     "file-loader": "^0.11.1",
+    "handlebars-loader": "^1.5.0",
+    "html-webpack-harddisk-plugin": "^0.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "koa-logger": "^2.0.1",
+    "koa-webpack-dev-middleware": "^1.4.5",
+    "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.3",
     "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5"
   }
 }
