Add endpoints for compliance log reporting

--- a/config/index.env
+++ b/config/index.env
@@ -23,3 +23,5 @@ RES_REDIS_HOST="127.0.0.1"
 RES_REDIS_PORT=6379
 
 STATES_LIST="AK,AL,AR,AZ,CA,CO,CT,DE,FL,GA,HI,IA,ID,IL,IN,KS,KY,LA,MA,MD,ME,MI,MN,MO,MS,MT,NC,ND,NE,NH,NJ,NM,NV,NY,OH,OK,OR,PA,RI,SC,SD,TN,TX,UT,VA,VT,WA,WI,WV,WY"
+
+SENDGRID_API_KEY=""
