--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-router": "^7.1.1",
     "koa-session": "^5.0.0",
     "koa-static": "^3.0.0",
+    "moment": "^2.18.1",
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
