hook up zip check to front end

--- a/config/index.env
+++ b/config/index.env
@@ -10,6 +10,7 @@ SC_SUPPLIER_URL="https://ws.shipcompliant.com/services/1.2/supplierservice.asmx?
 SC_TAX_URL="https://ws.shipcompliant.com/services/1.2/taxservice.asmx?WSDL"
 SC_USER="metonymyws@shipcompliant.com"
 SC_PASSWORD="Password1"
+SC_PARTNER_KEY=""
 
 
 # RESOURCES
