--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^1.1.0",
     "bcrypt": "^1.0.2",
     "js2xmlparser": "^2.0.2",
+    "json2csv": "^3.7.3",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-hbs": "^1.0.0-alpha.1",
@@ -30,10 +32,12 @@
     "redis": "^2.7.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
+    "sendgrid": "^5.1.0",
     "sequelize": "^3.30.4",
     "shopify-api-node": "^2.3.0",
     "shopify-token": "^3.0.0",
     "soap": "^0.19.0",
+    "uuid": "^3.0.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
