--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "es6-promise": "^4.1.0",
     "fetch": "^1.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "js2xmlparser": "^2.0.2",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
