--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "pg-hstore": "^2.3.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redis": "^2.7.1",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "sendgrid": "^5.1.0",
