--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "shopify-token": "^3.0.0",
     "soap": "^0.19.0",
     "uuid": "^3.0.1",
+    "victory": "^0.19.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
