--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "koa-webpack-dev-middleware": "^1.4.5",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
+    "postcss-loader": "^2.0.5",
     "pre-commit": "^1.2.2",
     "sass-loader": "^6.0.3",
+    "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5"
