--- a/config/index.env
+++ b/config/index.env
@@ -1,13 +1,14 @@
 set -o allexport
 
 # INTERNAL
-APP_URL="cec38c4d.ngrok.io"
+APP_URL="fb426d6e.ngrok.io"
 PORT=1988
 
 # SHIP COMPLIANT
 SC_CORE_URL="https://ws.shipcompliant.com/services/1.2/coreservice.asmx?WSDL"
 SC_SUPPLIER_URL="https://ws.shipcompliant.com/services/1.2/supplierservice.asmx?WSDL"
 SC_TAX_URL="https://ws.shipcompliant.com/services/1.2/taxservice.asmx?WSDL"
+SC_PRODUCT_URL="https://ws-dev.shipcompliant.com/services/1.2/productservice.asmx?WSDL"
 SC_USER="metonymyws@shipcompliant.com"
 SC_PASSWORD="Password1"
 SC_PARTNER_KEY=""
