--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": ". config/index.env && nodemon index.js",
     "dev": ". config/index.env && . config/local.env && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore ."
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
+    "build:prod": "webpack --config webpack.config.js"
   },
   "pre-commit": [
     "lint"
