--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": ". config/index.env && nodemon index.js",
-    "dev": ". config/index.env && . config/local.env && nodemon index.js",
+    "dev": "NODE_ENV=development . config/index.env && . config/local.env && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
     "build:prod": "webpack --config webpack.config.js"
