--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "ship-compliant",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "7.9.0"
+  },
   "main": "index.js",
   "scripts": {
-    "start": ". config/index.env && nodemon index.js",
+    "start": ". config/production.env && node index.js",
     "dev": "NODE_ENV=development . config/index.env && . config/local.env && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
     "build:prod": "webpack --config webpack.config.js"
   },
-  "pre-commit": [
-  ],
+  "pre-commit": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -25,6 +27,7 @@
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-hbs": "^1.0.0-alpha.1",
+    "koa-logger": "^2.0.1",
     "koa-router": "^7.1.1",
     "koa-send": "^4.1.0",
     "koa-session": "^5.0.0",
@@ -66,7 +69,6 @@
     "handlebars-loader": "^1.5.0",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "koa-logger": "^2.0.1",
     "koa-webpack-dev-middleware": "^1.4.5",
     "node-sass": "^4.5.2",
     "nodemon": "^1.11.0",
