integrate partner key

--- a/config/index.env
+++ b/config/index.env
@@ -13,7 +13,7 @@ SC_PRODUCT_URL="https://ws-dev.shipcompliant.com/services/1.2/productservice.asm
 
 SC_USER="metonymyws@shipcompliant.com"
 SC_PASSWORD="Password1"
-SC_PARTNER_KEY=""
+SC_PARTNER_KEY="638BBFEE-23A0-401B-9940-2B97A8FEA261"
 
 
 # RESOURCES
