--- a/cron.yaml
+++ b/cron.yaml
@@ -4,3 +4,7 @@ cron:
 - description: Sync orders tracking
   url: /orders/sync
   schedule: every 1 hours
+- description: Sync shop compliances
+  url: /compliance/tasks/sync
+  schedule: every day 04:00
+  timezone: America/Los_Angeles
