fix tax and auth

--- a/config/index.env
+++ b/config/index.env
@@ -9,10 +9,8 @@ SC_CORE_URL="https://ws.shipcompliant.com/services/1.2/coreservice.asmx?WSDL"
 SC_SUPPLIER_URL="https://ws.shipcompliant.com/services/1.2/supplierservice.asmx?WSDL"
 SC_TAX_URL="https://ws.shipcompliant.com/services/1.2/taxservice.asmx?WSDL"
 SC_SALESORDER_URL="https://ws.shipcompliant.com/services/1.2/salesorderservice.asmx?WSDL"
-SC_PRODUCT_URL="https://ws-dev.shipcompliant.com/services/1.2/productservice.asmx?WSDL"
+SC_PRODUCT_URL="https://ws.shipcompliant.com/services/1.2/productservice.asmx?WSDL"
 
-SC_USER="metonymyws@shipcompliant.com"
-SC_PASSWORD="Password1"
 SC_PARTNER_KEY="638BBFEE-23A0-401B-9940-2B97A8FEA261"
 
 
@@ -32,3 +30,16 @@ SENDGRID_API_KEY=""
 GOOGLE_APPLICATION_CREDENTIALS="path/to/file.json"
 
 LOGS_EXPORT_EXPIRY_DAYS=7
+
+# SHOPIFY
+API_KEY="cc4a45f80b5b09aa143cab3065972dd1"
+API_SECRET="611ea6cf44a6e0d88197f6b7f9751c94"
+
+# BCRYPT
+SALT_ROUNDS=10
+
+# GOOGLE MAPS
+GM_API_KEY="AIzaSyA7KP1IzEaZnUB-ho2ffdUvq1bYK-qxfkk"
+
+# KOA SESSION KEY
+SESSION_KEY="5E2625ED51D665B76436BBD31BFF9"
