add sub account to handle inventory

--- a/config/index.env
+++ b/config/index.env
@@ -13,6 +13,9 @@ SC_PRODUCT_URL="https://ws.shipcompliant.com/services/1.2/productservice.asmx?WS
 
 SC_PARTNER_KEY="638BBFEE-23A0-401B-9940-2B97A8FEA261"
 
+SC_INVENTORY_USER="vinelinkapp@gmail.com"
+SC_INVENTORY_PASS="M3t0nymy!"
+
 
 # RESOURCES
 RES_POSTGRES_HOST="127.0.0.1"
