--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "NODE_ENV=development . config/index.env && . config/local.env && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
-    "build:prod": "webpack --config webpack.config.js"
+    "build:prod": "webpack --config webpack.config.js",
+    "deploy": "npm run build:prod && gcloud app deploy"
   },
   "pre-commit": [],
   "author": "",
@@ -52,6 +53,7 @@
     "shopify-api-node": "^2.3.0",
     "shopify-token": "^3.0.0",
     "soap": "^0.19.0",
+    "system-sleep": "^1.3.5",
     "uuid": "^3.0.1",
     "victory": "^0.19.1",
     "xml2js": "^0.4.17"
