--- a/cron.yaml
+++ b/cron.yaml
@@ -3,7 +3,7 @@
 cron:
 - description: Sync orders tracking
   url: /orders/sync
-  schedule: every 1 hours
+  schedule: every 20 minutes
 - description: Sync shop compliances
   url: /compliance/tasks/sync
   schedule: every day 04:00
