--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^1.1.0",
+    "@shopify/polaris": "^1.1.1",
     "bcrypt": "^1.0.2",
     "es6-promise": "^4.1.0",
     "fetch": "^1.1.0",
@@ -33,10 +34,12 @@
     "koa-send": "^4.1.0",
     "koa-session": "^5.0.0",
     "koa-static": "^3.0.0",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "oauth": "^0.9.15",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
