--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,8 @@
   "presets": [
     "react",
     "es2015",
-    "stage-2"
-  ]
+    "stage-2",
+    "env"
+  ],
+  "plugins": ["transform-class-properties"]
 }
