site wide styling

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^1.0.2",
     "es6-promise": "^4.1.0",
     "fetch": "^1.1.0",
+    "history": "^4.6.3",
     "isomorphic-fetch": "^2.2.1",
     "js2xmlparser": "^2.0.2",
     "json2csv": "^3.7.3",
@@ -47,6 +48,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redis": "^2.7.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
