--- a/config/index.env
+++ b/config/index.env
@@ -1,7 +1,7 @@
 set -o allexport
 
 # INTERNAL
-APP_URL="vinelink-167517.appspot.com/"
+APP_URL=/compliancy-checker.herokuapp.com"
 PORT=1988
 
 # SHIP COMPLIANT
