--- a/config/index.env
+++ b/config/index.env
@@ -1,7 +1,8 @@
 set -o allexport
 
 # INTERNAL
-APP_URL="compliancy-checker.herokuapp.com/"
+#APP_URL="compliancy-checker.herokuapp.com/"
+APP_URL="405ac9d8.ngrok.io"
 PORT=1988
 
 # SHIP COMPLIANT
@@ -21,8 +22,8 @@ SC_INVENTORY_PASS="M3t0nymy!"
 RES_POSTGRES_HOST="127.0.0.1"
 RES_POSTGRES_PORT=5432
 RES_POSTGRES_DATABASE="compliancy-connector"
-RES_POSTGRES_USER="admin"
-RES_POSTGRES_PASSWORD="m3t0nymy"
+RES_POSTGRES_USER=""
+RES_POSTGRES_PASSWORD=""
 
 RES_REDIS_HOST="127.0.0.1"
 RES_REDIS_PORT=6379
@@ -33,8 +34,8 @@ GOOGLE_APPLICATION_CREDENTIALS="path/to/file.json"
 LOGS_EXPORT_EXPIRY_DAYS=7
 
 # SHOPIFY
-API_KEY="cebe34d8e11a928bba3868d984d2d8ea"
-API_SECRET="a231936c61f1a9d96ced65aeb3559c67"
+API_KEY="ef0f22f9c4bd5139bbf1136d64f2229d"
+API_SECRET="3fde1854aba195d94ada851c9eae075c"
 
 # BCRYPT
 SALT_ROUNDS=10
