--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
   "main": "index.js",
   "scripts": {
     "start": ". config/index.env",
-    "dev": "NODE_ENV=development . config/index.env && . config/local.env && nodemon index.js",
+    "dev": "NODE_ENV=development . config/index.env && nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
     "build:prod": "webpack --config webpack.config.js",
     "deploy": "npm run build:prod && gcloud app deploy"
   },
-  "pre-commit": [
-    "lint"
-  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^1.1.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^1.0.2",
     "es6-promise": "^4.1.0",
     "fetch": "^1.1.0",
@@ -52,9 +51,10 @@
     "request-promise": "^4.1.1",
     "sendgrid": "^5.1.0",
     "sequelize": "^3.30.4",
+    "sequelize-cli": "^5.4.0",
     "shopify-api-node": "^2.3.0",
     "shopify-token": "^3.0.0",
-    "soap": "^0.19.0",
+    "soap": "^0.25.0",
     "system-sleep": "^1.3.5",
     "uuid": "^3.0.1",
     "victory": "^0.19.1",
